It works again! Now with golvldb
